@@ -1565,6 +1565,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-user-share">
+    <version release="gnome-2.10">
+      <component name="gnome-user-share" dir="gnome-user-share" group="proposed">
+        <podir dir="po"/>
+        <potname name="gnome-user-share.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-utils">
     <version release="gnome-2.8">
       <component name="gnome-utils" dir="gnome-utils" group="desktop">
