@@ -1,5 +1,9 @@
 2005-01-10  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added gnome-user-share to proposed.
+
+2005-01-10  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added cupid to extras.
 
 2005-01-07  Christian Rose  <menthos@menthos.com>
